--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
-    "tailwind-variants": "^0.3.0"
+    "tailwind-variants": "^0.3.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
