--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "formik": "^2.4.6",
+    "i": "^0.3.7",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
+    "npm": "^10.9.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "tailwind-variants": "^0.3.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "yup": "0.32.11"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
