--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "formik": "^2.4.6",
     "i": "^0.3.7",
     "lucide-react": "^0.461.0",
