--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.7",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "i": "^0.3.7",
     "lucide-react": "^0.461.0",
